--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
     .media-grid img {
       width: 100%;
       border-radius: var(--radius);
-      object-fit: cover;
+      -o-object-fit: cover;
+         object-fit: cover;
       height: 140px;
       background: #eee;
     }
